# tlang

./: .gitignore  LICENSE  README.md  attribute.py  attribute_handlers.py  attribute_manager.py  dependency_manager.py  function_manager.py  kernel.py  linker.py  module_manager.py  pyproject.toml  reflection.json  requirements.txt  shader.py  shader_manager.py  shader_processor.py  shader_source_line.py  shader_stages.py  shader_utils.py  test.py  test2.py  test3.py
glsl_preprocessor/: entry_point_manager.py  generics_manager.py  include_manager.py  loader.py  memory_manager.py  processor.py  program_manager.py  shader_manager.py  template_renderer.py
shaders/: radix_sort.slang
src/tlang/: __init__.py  attribute.py  attribute_handlers.py  attribute_manager.py  binding_registry.py  buffer_pool.py  dependency_manager.py  function_manager.py  kernel.py  shader.py  shader_manager.py  shader_processor.py  shader_source_line.py  shader_stages.py  shader_utils.py
tlang/: __init__.py  attribute_handlers.py  attribute_manager.py  dependency_manager.py  function_manager.py  shader.py  shader_manager.py  shader_processor.py
