[project]
name = "tlang"
version = "0.1.0"
description = "GLSL Shader Preprocessor with modern language features."
authors = [
    { name = "Priyangkar Ghosh", email = "priyangkar.ghosh@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "moderngl",
    "jinja2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
