[project]
name = "tlang"
version = "0.1.4"
description = "GLSL Shader Preprocessor with modern language features."
authors = [
    { name = "Priyangkar Ghosh", email = "priyangkar.ghosh@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "glcontext",
    "moderngl",
    "jinja2",
    "regex"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
